--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1> Bem vindo à Minha Primeira página HTML</h1> 
     </header>
     <main>
+        <img src="https://wallpaper-house.com/data/out/12/wallpaper2you_530900.jpg" alt="Star Trek: The Next Generation"
         <h2> Sobre esta Página</h2>
         <p>Esta é uma página de exemplo criada para aprender os fundamentos do HTML. 
             Nela, você encontrará um exemplo básico de como estruturar uma página web
