--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <header>
         <h1> Bem vindo à Minha Primeira página HTML</h1> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, dolorum ipsam quis voluptates quaerat itaque blanditiis tempora maxime ducimus iusto magni ea repudiandae similique voluptatem, facilis pariatur quisquam placeat eaque!</p>
     </header>
     <main>
-        
+
         <img src="https://wallpaper-house.com/data/out/12/wallpaper2you_530900.jpg" alt="Star Trek: The Next Generation">
         <h2> Sobre esta Página</h2>
         <p>Esta é uma página de exemplo criada para aprender os fundamentos do HTML. 
