--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <header>
         <h1> Bem vindo à Minha Primeira página HTML</h1> 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, dolorum ipsam quis voluptates quaerat itaque blanditiis tempora maxime ducimus iusto magni ea repudiandae similique voluptatem, facilis pariatur quisquam placeat eaque!</p>
+        https://w0.peakpx.com/wallpaper/618/161/HD-wallpaper-deep-space-nine-characters-ds9-people-2020-sto.jpg
     </header>
     <main>
 
-        <img src="https://wallpaper-house.com/data/out/12/wallpaper2you_530900.jpg" alt="Star Trek: The Next Generation">
+        <img src="https://wallpaper-house.com/data/out/12/wallpaper2you_530900.jpg" alt="Star Trek: Deep Space 9">
         <h2> Sobre esta Página</h2>
         <p>Esta é uma página de exemplo criada para aprender os fundamentos do HTML. 
             Nela, você encontrará um exemplo básico de como estruturar uma página web
