--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
 
-        <img src="https://wallpaper-house.com/data/out/12/wallpaper2you_530900.jpg" alt="Star Trek: Deep Space 9">
+        <img src="https://i.pinimg.com/736x/10/c2/38/10c238f1658fd77673bd00727761e6f1.jpg" alt="Blonde Radio">
         <h2> Sobre esta Página</h2>
         <p>Esta é uma página de exemplo criada para aprender os fundamentos do HTML. 
             Nela, você encontrará um exemplo básico de como estruturar uma página web
