--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     </header>
     <main>
 
-        <img src="https://i.pinimg.com/736x/10/c2/38/10c238f1658fd77673bd00727761e6f1.jpg" alt="Blonde Radio">
+        <img src="https://i.pinimg.com/736x/10/c2/38/10c238f1658fd77673bd00727761e6f1.jpg" alt="Blonde">
+        
         <h2> Sobre esta Página</h2>
         <p>Esta é uma página de exemplo criada para aprender os fundamentos do HTML. 
             Nela, você encontrará um exemplo básico de como estruturar uma página web
