--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             Nela, você encontrará um exemplo básico de como estruturar uma página web
              e aplicar estilos simples utilizando CSS.
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi odio pariatur aperiam magni ipsa culpa quisquam accusantium aliquid minus esse in tempore eum, nisi impedit totam, eveniet, dignissimos at eius!</p>
         <h2>O que você vai aprender?</h2>
         <p>Com esta página, você vai aprender a:</p>
         <ul>
