--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
             border-radius: 8px;
             margin-bottom: 20px;
         }
+        header {
+            background-color: rgb(236, 184, 115);
+            color: black;
+            padding: 20px;
+            width: 100%;
+            text-align: center;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
