--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
             text-align: center;
             box-sizing: border-box;
         }
+        h2 {
+            color:rgb(223, 169, 181) ;
+        }
+        p {
+            line-height: 1.6;
+            
+        }
+        a {
+            color: rgb(236, 184, 115);
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -27,7 +38,7 @@
         </header>
     <main>
 
-        <img src="https://i.pinimg.com/736x/10/c2/38/10c238f1658fd77673bd00727761e6f1.jpg" alt="Blonde">
+        <img src="https://cdn.theatlantic.com/thumbor/uNip5BrDkh5zOy9p8mxwFuRhJq8=/40x0:1240x900/1200x900/media/img/mt/2016/08/tumblr_oc8gjpg8Bw1qdrz3yo1_1280/original.jpg" alt="Blonde">
         
         <h2> Sobre esta Página</h2>
         <p>Esta é uma página de exemplo criada para aprender os fundamentos do HTML. 
