--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin-bottom: 20px;
         }
         header {
-            background-color: rgb(236, 184, 115);
+            background-color: rgb(223, 169, 181);
             color: black;
             padding: 20px;
             width: 100%;
@@ -27,7 +27,7 @@
             
         }
         a {
-            color: rgb(236, 184, 115);
+            color: #df9432;
             text-decoration: none;
         }
     </style>
