--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-color: rgb(223, 169, 181);
             color: black;
             padding: 20px;
-            width: 100%;
+            width: auto;
             text-align: center;
             box-sizing: border-box;
         }
