--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Primeira página HTML</title>
     <style>
         img {
-            max-width: 100%;
-            height: auto;
+            width: 100%;
+            height: 100%;
             border-radius: 8px;
             margin-bottom: 20px;
         }
@@ -15,7 +15,7 @@
             background-color: rgb(223, 169, 181);
             color: black;
             padding: 20px;
-            width: auto;
+            width: 100%;
             text-align: center;
             box-sizing: border-box;
         }
