--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeira página HTML</title>
     <style>
+        body {
+            font-family: 'Trebuchet MS';
+            background-color: rgb(14, 13, 13);
+            color: aliceblue;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            min-height: 100vh;
+            overflow-x: hidden;
+
+        }
         img {
             width: 100%;
             height: 100%;
